# RustaceanAI

./: README.md
rust_ai/: Cargo.toml  README.md
rust_ai/docs/: README.md
rust_ai/src/: agents.rs  gui.rs  lib.rs  main.rs  new_feature.rs  tui.rs
rust_ai/src/providers/: gemini.rs  huggingface.rs  local.rs  mod.rs  openai.rs  openrouter.rs
rust_ai/tests/: cli.rs  new_feature_test.rs
