[package]
name = "rust_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
cursive = "0.20.0"
egui = "0.22.0"
eframe = "0.22.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
